fix homepage code block not overflowing like before

--- a/website/src/css/customTheme.scss
+++ b/website/src/css/customTheme.scss
@@ -342,6 +342,7 @@ html[data-theme="dark"] article .badge {
 .homepage {
   div[class^="codeBlockContainer"] {
     margin-bottom: 0;
+    overflow: visible;
 
     .prism-code {
       font-size: 90%;
